@@ -115,9 +115,9 @@
     </para>
 
     <refsect2>
-      <title>Example of image path expression</title>
+      <title>Example of the image path expression</title>
       <para>
-	If we have FITS file with name which was taken (based on RTS2 CTIME and
+	The next example works with the FITS file taken (based on RTS2 CTIME and
 	USEC) on 2006-10-17 at 18:22:03.447s, with R filter (RTS2 FILTER
 	keyword). Here we list few path expresions together with expected
 	values.
@@ -125,14 +125,24 @@
       <variablelist>
         <varlistentry>
 	  <term>
-	    <option>@DATE-OBS/%F/%f</option>
+	    <option>@DATE-OBS/%F/%04i/%f</option>
 	  </term>
   	  <listitem>
 	    <para>
-	      2006-10-17T18:22:03.447/R/20061017182203-0447.fits, if DATE-OBS keyword is filled.
+	      2006-10-17T18:22:03.447/R/0001/20061017182203-0447.fits, if DATE-OBS keyword is filled and image ID is 1.
 	    </para>
 	    <para>
-	      @DATE-OBS/R/20061017182203-0447.fits, if DATE-OBS keyword cannot be found.
+	      @DATE-OBS/R/0001/20061017182203-0447.fits, if DATE-OBS keyword cannot be found.
+	    </para>
+	  </listitem>
+	</varlistentry>
+        <varlistentry>
+	  <term>
+	    <option>%N%2F</option>
+	  </term>
+  	  <listitem>
+	    <para>
+	      20061017 R
 	    </para>
 	  </listitem>
 	</varlistentry>
@@ -152,6 +162,11 @@
     <para> 
       Substrings begining with % are expanded to various image-related values.
       They list is provided bellow.
+    </para>
+    <para>
+      Users can specify minimum length of the expanded string. If length is
+      prefixed with 0, the expand string will be right padded with 0 to specified
+      length.
     </para>
 
     <variablelist>
