@@ -1,3 +1,6 @@
+2010-09-21
+ * allow users to specify minimal length for expression format
+
 2010-09-11
  * moved Target to rts2db namespace, and some associated namespace changes
 
